--- a/README.asciidoc
+++ b/README.asciidoc
@@ -28,6 +28,8 @@ http://clement.storck.me/blog/2014/08/controle-et-supervision-de-la-piscine/
 - Plugin Pool sur Jeedom pour le controle de la piscine
 - Source Code for the Arduino: https://github.com/KiwiHC16/Piscine/blob/master/Source/Piscine.ino
 
+== Documents
+
 Collection de documents qui ont été utilisés: https://github.com/KiwiHC16/Piscine/tree/master/Documentation
 
 == Jeedom
